# Physical-Therapy-Market-Analysis

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
config/: cpt_codes.yaml  payers.yaml
scripts/: full_ingest.py  generate_competitive_report.py  ingest_bcbs_local.py  ingest_healthpartners.py  ingest_ucare.py  load_mn_nppes.py  optimized_ingest.py  overnight_ingest.sh  scan_bcbs_groups.py
src/: __init__.py  cli.py  config.py  downloader.py  nppes.py  parser.py  storage.py
src/reports/: __init__.py  base.py  fair_market_value.py  generate.py  market_benchmark.py  pdf_generator.py  rate_dimensions.py
