[project]
name = "mason-pt-data"
version = "0.1.0"
description = "TiC reimbursement data pipeline for PT contract analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ijson>=3.2.0",
    "httpx>=0.27.0",
    "duckdb>=1.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[project.scripts]
tic = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
